--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: Java CI with Gradle and SonarCloud
 
 on:
@@ -7,34 +6,48 @@ on:
   push:
     branches: [ "main", "master" ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  REF_BRANCH: ${{ github.event.repository.default_branch }}  # ← 기본 브랜치 자동(main/master)
+
 jobs:
   build-and-analyze:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write   # SonarCloud PR 데코레이션
+      pull-requests: write
+    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0      # New Code 분석 정확도
+          fetch-depth: 0
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v2
+
+      - name: Set up JDK 21 and Gradle
+        uses: gradle/actions/setup-gradle@v4
         with:
-          distribution: temurin
           java-version: '21'
-          cache: gradle
+          distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 1) 테스트 + 커버리지(XML/HTML) 생성
       - name: Test & Coverage
         run: ./gradlew clean test jacocoTestReport --no-daemon
 
-      # 실패해도 리포트는 업로드되게
+      - name: SonarCloud Scan
+        if: ${{ github.event_name == 'pull_request' }}      # ← PR에서만
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew sonarqube -Dsonar.newCode.referenceBranch=${{ env.REF_BRANCH }} --no-daemon
+
       - name: Upload test & coverage reports (HTML)
         if: always()
         uses: actions/upload-artifact@v4
@@ -43,9 +56,3 @@ jobs:
           path: |
             build/reports/tests/test/**/*
             build/reports/jacoco/test/html/**/*
-
-      # 2) SonarCloud 스캔 (Gradle 플러그인 사용)
-      - name: SonarCloud Scan
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # 레포 Secrets에 있어야 함
-        run: ./gradlew sonarqube --no-daemon
